# Gaggle

./: README.md
Raytracer/: CMakeLists.txt  README.md  framemaker1.sh  framemaker2.sh  oneshotbatch.sh  rayjob.sh
Raytracer/Code/: hit.h  image.cpp  image.h  light.h  main.cpp  material.h  object.cpp  object.h  objloader.cpp  objloader.h  polynomial.cpp  polynomial.h  ray.h  raytracer.cpp  raytracer.h  scene.cpp  scene.h  triple.h  vertex.h
Raytracer/Code/shapes/: cone.cpp  cone.h  cylinder.cpp  cylinder.h  mesh.cpp  mesh.h  mesh_spikey.cpp  mesh_spikey.h  sphere.cpp  sphere.h  torus.cpp  torus.h  triangle.cpp  triangle.h
Raytracer/Scenes/: bunny.json  scene01-mesh-texture-ss-reflect-lights-shadows.json  scene01-texture-ss-reflect-lights-shadows.json  softSpheres.json
